<resources>
    <string name="app_name">SimpleWeather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_forecast">天气预报</string>
    <string name="navigation_drawer_calendar">日历</string>
    <string name="navigation_drawer_diary">日记</string>
    <string name="navigation_drawer_setting">设置</string>
    <string name="navigation_drawer_about_us">关于</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="city_activity_city_select">选择城市</string>

    <string name="temperature">29</string>
    <string name="度">°</string>
    <string name="分割">|</string>
    <string name="daily">未来5日</string>
    <string name="daily_info1">第一天</string>
    <string name="hourly">未来48小时</string>
    <string name="hourly_info">第五天</string>
    <string name="hourly_info4">第四天</string>
    <string name="第二天">第二天</string>
    <string name="详细信息">详细信息</string>
    <string name="空气质量">空气质量</string>
    <string name="第三天">第三天</string>
    <string name="location">北京</string>
    <string name="info">7月23日,周一16:40</string>
    <string name="今天">今天</string>
    <string name="多云">多云</string>
    <string name="description">今天晚间20点后转小雨</string>
    <string name="第四天">第四天</string>
    <string name="第五天">第五天</string>
    <string name="第六天">第一天</string>
    <string name="第一天">第一天</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
