<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:background="#3186D9"
        tools:context="${relativePackage}.${activityClass}">


        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/location"
            android:textColor="#FDFDFD" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:text="@string/info"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/temperate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/location"
            android:layout_below="@+id/time"
            android:text="@string/temperature"
            android:textColor="#fff"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/temperate"
            android:layout_toEndOf="@id/temperate"
            android:layout_toRightOf="@id/temperate"
            android:text="@string/度"
            android:textColor="#FDFDFD"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperate"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/description"
                android:textColor="#FDFDFD" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="987dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="169dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="10sp"
                android:text="@string/详细信息"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="393dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="PM25"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/pm25"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="#FDFDFD"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="相对湿度"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="#FDFDFD"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="降水强度"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/intensity"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="#FDFDFD"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="风向"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/direction"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="#FDFDFD"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="风速"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/speed"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:gravity="center"
                    android:text="TextView"
                    android:textColor="#FDFDFD"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/daily"
                android:textColor="#fff"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/daily_info"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/today"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/今天"
                    android:textColor="#FDFDFD"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/first_day"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/第一天"
                    android:textColor="#FDFDFD"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/second_day"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/第二天"
                    android:textColor="#FDFDFD"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/third_day"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/第三天"
                    android:textColor="#FDFDFD"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/fourth_day"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/第四天"
                    android:textColor="#FDFDFD"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hourly"
                android:textColor="#fff"
                android:textStyle="bold" />

            <HorizontalScrollView
                android:id="@+id/hourly_info"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_weight="1">

                <LinearLayout
                    android:id="@+id/hourly_info_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

        </LinearLayout>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="43dp"
            android:layout_height="41dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="76dp"
            android:layout_toStartOf="@+id/location"
            app:srcCompat="@drawable/ic_rain" />

    </RelativeLayout>
</ScrollView>